<resources>
    <string name="app_name">AG Fitness</string>
    <string name="pullups">Подтягивания</string>
    <string name="pushups">Отжимания</string>
    <string name="press">Пресс</string>
    <string name="stretching">Растяжка</string>
    <string name="swimming">Плавание</string>
    <string name="pushups_description">Базовая схема отжиманий от пола выглядит следующим образом:
        необходимо принять упор лежа на ровной поверхности, руки расположить на ширине плеч, ладони направить вверх, стопы на ширине таза, пальцами ног упираться в пол. На вдохе руки сгибаются в локтях, корпус направляется вниз. Корпус должен образовать ровную линию, и во время наклона эта линия не должна ломаться: прогибы — это нарушение, они делают отжимание не только более легким, но и не эффективным. На выдохе принимается исходное положение.</string>
    <string name="pullups_discription">Для того чтобы подтягивания принесли вашему телу максимальную
        пользу, следует соблюдать правила выполнения упражнения. А именно: подтягивания следует выполнять без раскачивания тела и инерции, только за счет силы мышц; подъем тела следует осуществлять плавно, без рывков; в верхней точке упражнения подбородок должен быть над перекладиной; опускание тела также происходит плавно — продолжительность спуска равняется продолжительности подъема тела; дышать при подтягивании следует правильно: на подъеме следует делать выдох, а на спуске делать вдох; хват должен быть крепким; корпус должен быть расположен строго вертикально.</string>
    <string name ="press_description">Полные подъемы туловища комплексно воздействуют на все мышцы брюшного пресса. Это очень эффективное и удобное упражнение, лучше всего выполнять его на полу на коврике. Мышцы пресса «любят» большое количество повторений, поэтому подходы получаются довольно длинные.
Чем полные подъемы отличаются от частичных подъемов туловища:
Во-первых, при полном подъеме мышцы сокращаются более интенсивно и работают с большей амплитудой.
Во-вторых, брюшной пресс состоит из нескольких слоев мышц, делая полный подъем вы включаете в работу больше мышц пресса и больше мышечных волокон. </string>
    <string name="repeats_count">Повторов:</string>
    <string name="stretching_description">1.Перед тем, как выполнять растяжку мышц тщательно разогревайтесь перед тренировкой.
2.Абсолютно все упражнения на растяжку выполняйте плавно, под контролем, без каких либо резких необдуманных движений/рывков которые могут привести к травме (даже на разогретую мышцу).  
3.Во время выполнения того или иного упражнения, старайтесь не напрягать мышцы, ибо расслабленные мышцы гораздо лучше (эффективнее) растягиваются.
4.Когда выполняете упражнения на растяжку, всегда следите за тем, чтобы ваша спина (а именно позвоночник) был ровным (сулиться, кривиться нельзя, ибо так вы уменьшаете гибкость и эластичность мышц и связок).
5.Дыхание должно быть как можно более спокойным и ровным (исходное положение — вдох (нос), растягивание — выдох (рот)) –  следите за этим (и ни в коем случае, не задерживайте дыхание во время выполнения того или иного упражнения, это не допустимо).
6.Как правило, время выполнения одного упражнения составляет около 60 секунд.
7.Возьмите в привычку заниматься (тренироваться) регулярно
8. Растягивать тело следует симметрично, уделяя каждой конечности или половине тела одинаковое внимание.
13. Разумной продолжительностью тренировки на гибкость считается, как минимум 30-50 минут, не меньше. </string>
    <string name="reset">Cброс</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="swimming_description">Брасс
        5.4.1. С начала первого гребка руками после старта и после каждого поворота пловец должен лежать на груди. Поворот на спину запрещён в любое время. На всем протяжении дистанции полный цикл должен выполняться в такой последовательности: один гребок руками и один толчок ногами.

5.4.2. Все движения рук должны быть одновременны и выполняться в одной горизонтальной плоскости без чередующихся движений.

5.4.3. Руки должны выноситься вперёд от груди по, выше или ниже поверхности воды. Локти должны находиться под водой, за исключением последнего гребка перед поворотом, во время выполнения поворота и финального гребка на финише. Руки должны возвращаться назад по поверхности воды или под водой. Руки не должны заходить за линию бёдер, исключая первый гребок после старта и каждого поворота.

5.4.4. В течение каждого полного цикла, какая-либо часть головы пловца должна разорвать водную поверхность. После старта и каждого поворота пловец может сделать один полный гребок руками до бёдер. Голова должна разорвать поверхность воды прежде, чем руки начнут движение внутрь из наиширочайшей части второго гребка. Разрешается одно дельфинообразное движение ногами вниз во время или после выполнения полного гребка руками перед толчком ногами брассом пока тело полностью погружено в воду (В настоящее время разрешен дельфинообразный удар ногами лишь во время выполнения полного гребка руками, также называемого «протяжкой»). После этого все движения ног должны быть одновременными и выполняться в одной горизонтальной плоскости без чередующихся движений.

Объяснение: удар ногами дельфином не является частью цикла движений и разрешается только после старта и поворота, пока выполняется гребок руками к ногам или после выполнения полного гребка руками перед толчком ногами брассом пока тело полностью погружено в воду. Не разрешается выполнять дельфинообразное движение ногами до момента начала гребка руками после старта и поворота.

5.4.5. Во время активной части толчка стопы должны быть развёрнуты в стороны. Ножницеобразные, вибрирующие или дельфинообразные удары книзу не допускаются, исключая момент по п. 5.4.4. Нарушение поверхности воды стопами ног разрешается, если только вслед за этим не следует дельфинообразный удар книзу.

На каждом повороте и на финише дистанции касание должно быть сделано обеими руками одновременно выше, ниже или по поверхности воды. Голова может погружаться в воду после последнего гребка руками перед касанием при условии нарушения ею поверхности воды в какой-либо точке во время последнего полного или неполного цикла, предшествующего касанию.</string>
</resources>
